infra/components/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
spec:
  ingressClassName: nginx
  rules:
    # 'host' will be patched
    - http:
        paths:
          - pathType: Prefix
            path: /api/auth
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/core
            backend:
              service:
                name: core
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web
                port:
                  number: 80
